--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.3'
 services:
 
   db:
-    image: mysql:5.7
+    image: mariadb:latest
     ports:
       - 3306:3306
     environment:
